# play-engine

./: .gitignore  CMakeLists.txt
res/Shaders/: color.frag  color.vert
src/: main.cpp
src/Core/: Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/Graphics/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp
